# LRIP

./: .gitignore  Makefile  README.md  pyproject.toml
exp/exp10/agp/: combinations.yaml  results.csv
exp/exp10/lrip/: combinations.yaml  results.csv
exp/exp10/lrr/: combinations.yaml  results.csv
exp/exp10/lth/: combinations.yaml  results.csv
exp/exp10/noprune/: combinations.yaml  results.csv
exp/exp10/noprune_lrfix/: combinations.yaml  results.csv
exp/exp11/agp/: combinations.yaml  results.csv
exp/exp11/lrip/: combinations.yaml  results.csv
exp/exp11a/agp/: combinations.yaml  results.csv
exp/exp14/: combinations.yaml  results.csv
exp/vis03d/: combinations.yaml
exp/vis03e/: combinations.yaml
src/: gen_combinations.py  gen_gsm_horizon.py  gen_gsm_landscape.py  gen_vis_landscape.py  main.py
src/callbacks/: __init__.py  gradual_projection.py  lr_based_adjust.py  lr_momentum.py  lr_plateau.py  patient_checkpoint.py  pl_callback.py  sparsity_monitor.py  toggle_optimizer.py
src/datasets/: __init__.py  imfolder_imclass_v1.py  torchvision_imclass_v1.py  utils.py
src/metrics/: __init__.py  top_k.py  torch_loss.py
src/models/: __init__.py  mnist_model.py  timm_model.py
src/optimizers/: __init__.py  schedule_free_optimizer.py  torch_optimizer.py
src/schedulers/: __init__.py  cyclic_steplr.py  listener_lr.py  torch_scheduler.py
src/tasks/: __init__.py  image_classification.py
src/transforms/: __init__.py  torchvision_transform.py
src/utils/: __init__.py  get_modules.py  named_dict.py  plot_utils.py  setup_logging.py
(+54 files in other folders)
