[project]
name = "LRIP"
version = "0.1.0"
description = "LRIP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.1",
    "notebook>=7.5.4",
    "pytorch-lightning>=2.5.4",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "ruff>=0.14.10",
    "schedulefree>=1.4.1",
    "scipy>=1.17.0",
    "tensorboard>=2.20.0",
    "timm>=1.0.22",
    "torch-summary>=1.4.5",
    "webdataset>=1.0.2",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "plotly>=6.6.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.2",
    "thop>=0.1.1.post2209072238",
    "tabulate>=0.10.0",
]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
preview = true
select = ["I", "Q", "N", "F", "E", "W"]
ignore = [
    "E501"  # Line too long
]
exclude = [
    "*.ipynb"
]
